force-app/main/default/objects/Maintenance_Visit__c/Maintenance_Visit__c.object-meta.xml
<CustomObject>
    <label>Maintenance Visit</label>
    <nameField>
        <displayFormat>MV-{000000}</displayFormat>
        <label>Visit Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Maintenance Visits</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>