force-app/main/default/objects/Maintenance_Visit__c/fields/Customer_Satisfaction_Rating__c.field-meta.xml
<CustomField>
    <fullName>Customer_Satisfaction_Rating__c</fullName>
    <label>Customer Satisfaction Rating</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>5 - Excellent</fullName>
            </value>
            <value>
                <fullName>4 - Good</fullName>
            </value>
            <value>
                <fullName>3 - Average</fullName>
            </value>
            <value>
                <fullName>2 - Below Average</fullName>
            </value>
            <value>
                <fullName>1 - Poor</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>