force-app/main/default/objects/Maintenance_Visit__c/fields/Customer_Signature_Captured__c.field-meta.xml
<CustomField>
    <fullName>Customer_Signature_Captured__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Customer Signature Captured</label>
    <type>Checkbox</type>
</CustomField>