force-app/main/default/objects/Maintenance_Visit__c/fields/Equipment__c.field-meta.xml
<CustomField>
    <fullName>Equipment__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Equipment</label>
    <referenceTo>Equipment_Asset__c</referenceTo>
    <relationshipLabel>Maintenance Visits</relationshipLabel>
    <relationshipName>Maintenance_Visits</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>