force-app/main/default/objects/Maintenance_Visit__c/fields/Followup_Notes__c.field-meta.xml
<CustomField>
    <fullName>Followup_Notes__c</fullName>
    <label>Follow-up Notes</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>