force-app/main/default/objects/Maintenance_Visit__c/fields/Followup_Required__c.field-meta.xml
<CustomField>
    <fullName>Followup_Required__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Follow-up Required</label>
    <type>Checkbox</type>
</CustomField>