force-app/main/default/objects/Maintenance_Visit__c/fields/Issues_Found__c.field-meta.xml
<CustomField>
    <fullName>Issues_Found__c</fullName>
    <label>Issues Found</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>