force-app/main/default/objects/Maintenance_Visit__c/fields/Parts_Used__c.field-meta.xml
<CustomField>
    <fullName>Parts_Used__c</fullName>
    <label>Parts Used</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>