force-app/main/default/objects/Maintenance_Visit__c/fields/Scheduled_Start__c.field-meta.xml
<CustomField>
    <fullName>Scheduled_Start__c</fullName>
    <label>Scheduled Start</label>
    <type>DateTime</type>
</CustomField>