force-app/main/default/objects/Maintenance_Visit__c/fields/Service_Contract__c.field-meta.xml
<CustomField>
    <fullName>Service_Contract__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Service Contract</label>
    <referenceTo>Service_Contract__c</referenceTo>
    <relationshipLabel>Maintenance Visits</relationshipLabel>
    <relationshipName>Maintenance_Visits</relationshipName>
    <type>Lookup</type>
</CustomField>