force-app/main/default/objects/Maintenance_Visit__c/fields/Technician__c.field-meta.xml
<CustomField>
    <fullName>Technician__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Technician</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Maintenance_Visits</relationshipName>
    <type>Lookup</type>
</CustomField>