force-app/main/default/objects/Maintenance_Visit__c/fields/Visit_Outcome__c.field-meta.xml
<CustomField>
    <fullName>Visit_Outcome__c</fullName>
    <label>Visit Outcome</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Completed Successfully</fullName>
            </value>
            <value>
                <fullName>Issue Resolved</fullName>
            </value>
            <value>
                <fullName>Follow-up Required</fullName>
            </value>
            <value>
                <fullName>Equipment Replaced</fullName>
            </value>
            <value>
                <fullName>Unable to Complete</fullName>
            </value>
            <value>
                <fullName>Customer Cancelled</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>