force-app/main/default/objects/Maintenance_Visit__c/fields/Visit_Type__c.field-meta.xml
<CustomField>
    <fullName>Visit_Type__c</fullName>
    <label>Visit Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Preventive Maintenance</fullName>
            </value>
            <value>
                <fullName>Emergency Repair</fullName>
            </value>
            <value>
                <fullName>Standard Repair</fullName>
            </value>
            <value>
                <fullName>Inspection</fullName>
            </value>
            <value>
                <fullName>Installation</fullName>
            </value>
            <value>
                <fullName>Warranty Service</fullName>
            </value>
            <value>
                <fullName>Follow-up</fullName>
            </value>
            <value>
                <fullName>Quarterly Tune-up</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>