force-app/main/default/objects/Maintenance_Visit__c/fields/Work_Performed__c.field-meta.xml
<CustomField>
    <fullName>Work_Performed__c</fullName>
    <label>Work Performed</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>